--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,8 +1,9 @@
 name: Deploy
 
 on:
-  push:
-    branches: [main]
+    workflow_run:
+    workflows: ["ci"]
+    types: [completed]
   workflow_dispatch:
     inputs:
       target:
