--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "devDependencies": {
     "eslint": "^9.0.0",
     "eslint-plugin-jest": "^28.0.0",
+    "globals": "^17.0.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.4"
   }
 }
-
